# fast_di

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
benchmarks/include/benchmarks/: Builder.hpp  Container.hpp  Entity.hpp
benchmarks/src/: Builder.cpp  BuilderMain.cpp  Container.cpp  ContainerMain.cpp
classic_di/: CMakeLists.txt
classic_di/include/classic_di/: DIContainer.hpp  DIContainerBuilder.hpp  DISubscribe.hpp  FunctionTypeTraits.hpp  GlobalDI.hpp
classic_di/include/classic_di/type_traits/: FunctionTypeTraits.hpp  Pack.hpp  TypeLists.hpp
classic_di/src/: main.cpp
di_dynamic/: CMakeLists.txt
di_dynamic/include/fast_di/dynamic/: DIContainer.hpp  FastDI.hpp
di_dynamic/include/fast_di/dynamic/implementation/: DIContainer.hpp  DIContainerBuilder.hpp  LifeCycle.hpp  RegistrationBuilder.hpp  WrapWithCreatorIfNotCreatable.hpp
di_global/: CMakeLists.txt
di_global/include/fast_di/global/: GlobalDI.hpp
di_global/include/fast_di/global/private/global_di_aggregator/: CppTarget.hpp  CppTargetAggregator.hpp  DelimFileReader.hpp  FileIterator.hpp  FileSystem.hpp  HppTarget.hpp  HppTargetAggregator.hpp  IDataAggregator.hpp  ITokenizer.hpp
di_global/include/fast_di/global/public/: GlobalDI.hpp
di_global/src/global_di_aggregator/: DelimFileReader.cpp  FileIterator.cpp  main.cpp
di_static/: CMakeLists.txt
di_static/include/fast_di/static/: DIContainer.hpp  FastDI.hpp
di_static/include/fast_di/static/implementation/: DIContainer.hpp
di_static/include/fast_di/static/implementation/configs/: ConfigPredicate.hpp  Configs.hpp
di_static/include/fast_di/static/implementation/configs/register/: ConfigPredicate.hpp  ConfigWrapper.hpp  Register.hpp
di_static/include/fast_di/static/implementation/configs/register/other_configs/: AsInterface.hpp  ConstructedWith.hpp  OtherConfigs.hpp  WithTag.hpp  WithTagOfDependencyAt.hpp
di_udil/: CMakeLists.txt
di_udil/include/fast_di/udil/: FastDI.hpp  UDIL.hpp
di_udil/include/fast_di/udil/implementation/: CommonConfigs.hpp  CommonInnerConfigs.hpp  CommonUDIL.hpp  DynamicConfigs.hpp  DynamicUDIL.hpp  LifeCycle.hpp  StaticConfigs.hpp  StaticUDIL.hpp
di_utilities/: CMakeLists.txt
di_utilities/include/fast_di/utilities/: FunctionTypeTraits.hpp  Pack.hpp  TypeLists.hpp
diagram/: Application.hpp  ClassDiagram.cd  DIContainerBuilder.hpp  ILogger.hpp  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  UserController.hpp  UserModel.hpp
diagram/Diagram/: ClassDiagram.cd  Diagram.sln  Diagram.vcxproj  Diagram.vcxproj.filters
exe/: CMakeLists.txt
exe/include/exe/: Application.h  Application.hpp  Application.hppdi  DI.hpp
exe/include/exe/Controllers/: Controllers.hppdi  TaskController.h  TaskController.hpp  UserController.h  UserController.hpp
exe/include/exe/Database/: Database.hppdi  IDatabase.hpp  PostgreSQLDatabase.h  PostgreSQLDatabase.hpp
exe/include/exe/Logger/: FileLogger.h  FileLogger.hpp  ILogger.h  Logger.hppdi
exe/include/exe/Models/: Models.hppdi  TaskModel.h  TaskModel.hpp  UserModel.h  UserModel.hpp
exe/src/: Application.cpp  DI.cpp  DebugPrinter.cpp  TaskController.cpp  UserModel.cpp  main.cpp
fast_di/: CMakeLists.txt
fast_di/include/fast_di/: ConfigPredicate.hpp  DIConfigHandler.hpp  DIContainer.hpp  Pack.hpp  Tag.hpp  TypeLists.hpp
fast_di/include/fast_di/configs/: ConfigPredicate.hpp  Configs.hpp  Register.hpp
fast_di/include/fast_di/configs/register/: ConfigPredicate.hpp  ConfigWrapper.hpp  Register.hpp
fast_di/include/fast_di/configs/register/other_configs/: AsInterface.hpp  OtherConfigs.hpp  WithTag.hpp
global_di/: CMakeLists.txt
global_di/include/: DITargetExample.hpp  SomeDep.hpp  SomeDep.hppdi
global_di/src/: DITargetExample.cpp  main.cpp
smtp_server/: CMakeLists.txt
smtp_server/database/: CMakeLists.txt
smtp_server/database/include/command/: IDBCommand.hpp
smtp_server/database/include/command/user/: CreateUserCommand.hpp  DeleteUserCommand.hpp
smtp_server/database/include/database/: QueryResponse.hpp
smtp_server/database/include/database/command/: DBCommandArgs.hpp  IDBCommand.hpp
smtp_server/database/include/database/command/user/: CreateUserCommand.hpp  DeleteUserCommand.hpp
smtp_server/database/src/: QueryResponse.cpp
smtp_server/database/src/command/: DBCommandArgs.cpp
smtp_server/database/src/command/user/: CreateUserCommand.cpp  DeleteUserCommand.cpp
smtp_server/exe/: CMakeLists.txt
smtp_server/exe/src/: main.cpp
test/: CMakeLists.txt
test/include/test/entities/: Decorator.hpp  IntContainer.hpp
test/src/: StaticDITests.cpp  TypeTraitsTests.cpp  some_tests.cpp  static_di_test.cpp
test/src/entities/: Decorator.cpp
test_cross_platform/ubuntu20.04/: Dockerfile
tests/: CMakeLists.txt
tests/include/tests/: SomeInclude.hpp
tests/include/tests/entities/: Decorator.hpp
tests/src/dynamic/: Container.cpp
tests/src/global/: some.cpp
tests/src/static/: Container.cpp
tests/src/udil/: udil.cpp
tests/src/utilities/: Pack.cpp
utilities/: CMakeLists.txt
utilities/include/utilities/: FunctionTypeTraits.hpp  Pack.hpp  TypeLists.hpp
